--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
     "firebase": "^10.13.0",
     "next": "14.2.7",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
-    "react-spinners": "^0.14.1"
+    "react-icons": "^5.3.0",
+    "react-spinners": "^0.14.1",
+    "react-toastify": "^10.0.5",
+    "sass": "^1.78.0",
+    "sweetalert2": "^11.14.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "eslint": "^8",
